feat: add a11y test

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -1,10 +1,19 @@
 {
-	"languages": {
-		"en": {
-			"Name": "English"
-		},
-		"es": {
-			"Name": "Spanish"
+	"language": {
+		"Select": "Select language",
+		"languages": {
+			"en": {
+				"Name": "English"
+			},
+			"es": {
+				"Name": "Spanish"
+			}
+		}
+	},
+	"theme": {
+		"switcher": {
+			"light": "Switch to light mode",
+			"dark": "Switch to dark mode"
 		}
 	}
 }
