--- a/src/i18n/locales/es/game.json
+++ b/src/i18n/locales/es/game.json
@@ -1,1 +1,12 @@
-{}
+{
+	"actions": {
+		"Play": "Jugar",
+		"Stop": "Detener"
+	},
+	"assets": {
+		"Mole": "Topo"
+	},
+	"score": {
+		"Points": "{{score}} puntos"
+	}
+}
