feat: handle best score

--- a/src/i18n/locales/es/game.json
+++ b/src/i18n/locales/es/game.json
@@ -7,6 +7,7 @@
 		"Mole": "Topo"
 	},
 	"score": {
-		"Points": "{{score}} puntos"
+		"Points": "{{score}} puntos",
+		"New-record": "¡Mejor puntuación!"
 	}
 }
