--- a/src/i18n/locales/en/game.json
+++ b/src/i18n/locales/en/game.json
@@ -7,6 +7,7 @@
 		"Mole": "Mole"
 	},
 	"score": {
-		"Points": "{{score}} points"
+		"Points": "{{score}} points",
+		"New-record": "New record!"
 	}
 }
