feat: greet user

--- a/src/i18n/locales/es/game.json
+++ b/src/i18n/locales/es/game.json
@@ -9,5 +9,8 @@
 	"score": {
 		"Points": "{{score}} puntos",
 		"New-record": "¡Mejor puntuación!"
+	},
+	"layout": {
+		"Greeting": "¡Hola {{name}}!"
 	}
 }
