feat: difficulty selector

--- a/src/i18n/locales/en/game.json
+++ b/src/i18n/locales/en/game.json
@@ -12,5 +12,14 @@
 	},
 	"layout": {
 		"Greeting": "Hi {{name}}!"
+	},
+	"config": {
+		"difficulty": {
+			"options": {
+				"easy": "Easy",
+				"medium": "Medium",
+				"hard": "Hard"
+			}
+		}
 	}
 }
