feat: best score display

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -15,5 +15,10 @@
 			"light": "Switch to light mode",
 			"dark": "Switch to dark mode"
 		}
+	},
+	"best-score": {
+		"Title": "Best score",
+		"No-score": "No best score yet. Start playing to set a record!",
+		"Score": "{{name}} has {{score}} as the best score."
 	}
 }
