feat: moles amount controller

--- a/src/i18n/locales/en/game.json
+++ b/src/i18n/locales/en/game.json
@@ -20,6 +20,12 @@
 				"medium": "Medium",
 				"hard": "Hard"
 			}
+		},
+		"moles-amount": {
+			"actions": {
+				"Increase": "Increase moles amount",
+				"Decrease": "Decrease moles amount"
+			}
 		}
 	}
 }
