feat: translate missing files

--- a/src/i18n/locales/es/game.json
+++ b/src/i18n/locales/es/game.json
@@ -13,4 +13,20 @@
 	"layout": {
 		"Greeting": "¡Hola {{name}}!"
 	}
+,
+	"config": {
+		"difficulty": {
+			"options": {
+				"easy": "Fácil",
+				"medium": "Medio",
+				"hard": "Difícil"
+			}
+		},
+		"moles-amount": {
+			"actions": {
+				"Increase": "Aumentar cantidad de topos",
+				"Decrease": "Disminuir cantidad de topos"
+			}
+		}
+	}
 }
