--- a/src/i18n/locales/es/common.json
+++ b/src/i18n/locales/es/common.json
@@ -12,4 +12,10 @@
 			"dark": "Cambiar a modo oscuro"
 		}
 	}
+,
+  "best-score": {
+    "Title": "Mejor puntuación",
+    "No-score": "Aún no hay mejor puntuación. ¡Empieza a jugar para establecer un récord!",
+    "Score": "{{name}} tiene {{score}} como la mejor puntuación."
+  }
 }
