fix: add aria label to logout button

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -20,5 +20,10 @@
 		"Title": "Best score",
 		"No-score": "No best score yet. Start playing to set a record!",
 		"Score": "{{name}} has {{score}} as the best score."
+	},
+	"session": {
+		"actions": {
+			"Logout": "Logout"
+		}
 	}
 }
