fix: missing selector label

--- a/src/i18n/locales/en/game.json
+++ b/src/i18n/locales/en/game.json
@@ -19,7 +19,8 @@
 				"easy": "Easy",
 				"medium": "Medium",
 				"hard": "Hard"
-			}
+			},
+			"Select": "Select difficulty"
 		},
 		"moles-amount": {
 			"actions": {
