--- a/src/i18n/locales/es/game.json
+++ b/src/i18n/locales/es/game.json
@@ -19,7 +19,8 @@
 				"easy": "Fácil",
 				"medium": "Medio",
 				"hard": "Difícil"
-			}
+			},
+			"Select": "Seleccionar dificultad"
 		},
 		"moles-amount": {
 			"actions": {
